[package]
name = "option_macro"
version = "0.1.0"
authors = ["adsick <adsick@protonmail.com>"]
edition = "2021"
description = "a convenience macro"
repository = "https://github.com/adsick/option_macro"
license = "MIT OR Apache-2.0"
keywords = ["option", "macro", "helper", "macro_rules"]
exclude = ["tests.rs"]

[dependencies]
